main/monitoring/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring  
  annotations:
    #kubernetes.io/ingress.class: nginx
    #kubernetes.io/ingress.class: public    
spec:
  rules:
  - host: grafana.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-grafana
            port:
              number: 3000
